[gd_scene load_steps=14 format=3 uid="uid://bkptlk61y5222"]

[ext_resource type="PackedScene" uid="uid://7mm1fthd05j6" path="res://scenes/characters/enemy.tscn" id="1_amkpe"]
[ext_resource type="Texture2D" uid="uid://eh5egx0rrwpa" path="res://assets/graphics/enemies.png" id="2_5ojd5"]
[ext_resource type="Script" path="res://scripts/Bowser.gd" id="2_i7mof"]
[ext_resource type="Script" path="res://scripts/HadoukenLauncher.gd" id="4_5c4h2"]
[ext_resource type="Script" path="res://scripts/HammerLauncher.gd" id="5_pc5t8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jxljd"]
radius = 8.0
height = 24.0

[sub_resource type="Animation" id="Animation_4fhm8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jvqnw"]
resource_name = "launch"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/HadoukenLauncher")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HadoukenTimer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start"
}]
}

[sub_resource type="Animation" id="Animation_jnggc"]
resource_name = "move"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nkf64"]
_data = {
"RESET": SubResource("Animation_4fhm8"),
"launch": SubResource("Animation_jvqnw"),
"wonder": SubResource("Animation_jnggc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85lmy"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q68jb"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yck4v"]
size = Vector2(8, 8)

[node name="Bowser" instance=ExtResource("1_amkpe")]
collision_mask = 1
script = ExtResource("2_i7mof")

[node name="Graphics" parent="." index="0"]
position = Vector2(0, -16)

[node name="Sprite2D" parent="Graphics" index="0"]
texture = ExtResource("2_5ojd5")
hframes = 4
region_enabled = true
region_rect = Rect2(672, 0, 128, 32)

[node name="HadoukenLauncher" type="Marker2D" parent="Graphics" index="1"]
position = Vector2(-8, -4)
script = ExtResource("4_5c4h2")

[node name="HammerLauncher" type="Marker2D" parent="Graphics" index="2"]
position = Vector2(-6, -10)
script = ExtResource("5_pc5t8")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(8, -12)
shape = SubResource("CapsuleShape2D_jxljd")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_nkf64")
}

[node name="VisibleOnScreenNotifier2D" parent="." index="4"]
position = Vector2(0, -16)
scale = Vector2(1.6, 1.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-8, -24)
shape = SubResource("RectangleShape2D_85lmy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox" index="1"]
position = Vector2(8, -12)
shape = SubResource("RectangleShape2D_q68jb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hurtbox" index="2"]
position = Vector2(-4, -12)
shape = SubResource("RectangleShape2D_yck4v")

[node name="JumpTimer" type="Timer" parent="." index="6"]
wait_time = 2.0
one_shot = true

[node name="DirectionTimer" type="Timer" parent="." index="7"]

[node name="HadoukenTimer" type="Timer" parent="." index="8"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="timeout" from="HadoukenTimer" to="." method="_on_hadouken_timer_timeout"]
